--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,33 +1,51 @@
-.search-container {
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    margin: 5vw;
-    color: #000;
-    flex-direction: row;
+.search {
+    &-container {
+        display: flex;
+        justify-content: center;
+        margin: 10px;
+        align-items: center;
+        color: #000;
+        flex-direction: row;
+        border-radius: 4px;
+        box-shadow: 0 2px 8px 0 #000;
+        box-sizing: border-box;
+    }
 
     &-input {
         width: 100%;
-        height: 48px;
+        height: 44px;
         background-color: #fff;
-        border: 1px solid #fff;
-        border-radius: 4px;
         font-size: medium;
         font-weight: normal;
-        box-shadow: 0 2px 8px 0 #000;
-
+        padding-left: 1vw;
+        border: 0px;
         cursor: pointer;
-        display: inline-flex;
-        overflow: none;
-
         justify-content: center;
-        box-sizing: border-box;
-        line-height: 1.75;
 
         &-withIcon {
             background-position: right center;
             background-position: calc(100% - 15px);
-            background: url("") no-repeat scroll 7px 7px;
+            //background: url("") no-repeat scroll 7px 7px;
+        }
+    }
+
+    &-ctaBtn {
+        background-color: #3f5184;
+        padding: 10px;
+        border-top-right-radius: 3px;
+        border-bottom-right-radius: 3px;
+        border-width: 0;
+        border-style: solid;
+
+        &:active {
+            background-color: #324372;
+            box-shadow: 0 2px 1px 0 #414040;
+        }
+
+        &:disabled {
+            border-width: 0px;
+            box-shadow: none;
+            background-color: #aaa;
         }
     }
 }
