--- a/src/App.css
+++ b/src/App.css
@@ -2,38 +2,36 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.toast {
+  width: 100%;
+  padding: 10px;
+  position: absolute;
+  background: #ccc;
+  color: #666;
+  font-size: 200%;
+  text-align: center;
+  left: 0;
+  top: 0;
+  right: 0;
+  transform: translateY(-100px);
+  animation: slideDown 3s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes slideDown {
+
+  0%,
+  100% {
+    -webkit-transform: translateY(-100px);
+  }
+
+  10%,
+  90% {
+    -webkit-transform: translateY(0px);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 768px) {
+  .toast {
+    padding: 5px;
   }
 }
